--- a/index.html
+++ b/index.html
@@ -1,3 +1,68 @@
-<html>
-<p>I'm working on it!</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Francis Hart</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <style>
+  body {
+  	background-color: #ECECEC;
+  	color: #444;
+  }
+  	a {
+  		font-weight: 800;
+  	}
+  /* unvisited link */
+	a:link {
+	    color: #222;
+	}
+
+	/* visited link */
+	a:visited {
+	    color: #222;
+	}
+
+	/* mouse over link */
+	a:hover {
+	    color: #222;
+	}
+
+	/* selected link */
+	a:active {
+	    color: #222;
+	}
+  </style>
+  <body>
+    <div class="row" style="padding-top:6rem;">
+    	<div class="col-md-12">
+    		<div class="container">
+    			<h1 style="padding-bottom:3rem;">Hello!</h1>
+    			<p>I am an iOS and full stack developer.</p>
+    			<p>I make <a href="https://skeychkey.co">Sketchkey Keyboard</a>, a drawing keyboard for iOS which has had over 10,000 downloads and has been featured 13 times.</p>
+    			<p>Previously, I was a full-stack developer at <a href="https://samlabs.me">SAM Labs</a> where I worked on firmware and bluetooth communications, cloud infrastructure and the frontend application.</p>
+    			<p>I graduated with a Masters in Computer Science from the University of Bristol and was awarded the Best Computer Architecture award for my dissertation on cryogenic microelectronics.</p>
+    			<p>Feel free to contact me via <a href="https://uk.linkedin.com/in/francishart">LinkedIn</a>.</p>
+    			<p style="padding-top:3rem;">Francis Hart</p>
+    		</div>
+    	</div>
+    </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
