--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <style>
   body {
   	background-color: #ECECEC;
-  	color: #444;
+  	color: #797979;
   }
   	a {
   		font-weight: 800;
@@ -49,7 +49,7 @@
     <div class="row" style="padding-top:6rem;">
     	<div class="col-md-12">
     		<div class="container">
-    			<h1 style="padding-bottom:3rem;">Hello!</h1>
+    			<h1 style="padding-bottom:3rem; font-weight: 200; font-size: 40px; color:#000;">Hello!</h1>
     			<p>I am an iOS and full stack developer.</p>
     			<p>I make <a href="https://skeychkey.co">Sketchkey Keyboard</a>, a drawing keyboard for iOS which has had over 10,000 downloads and has been featured 13 times.</p>
     			<p>Previously, I was a full-stack developer at <a href="https://samlabs.me">SAM Labs</a> where I worked on firmware and bluetooth communications, cloud infrastructure and the frontend application.</p>
