Adding social buttons and updating text and links.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -44,6 +45,27 @@
 	a:active {
 	    color: #222;
 	}
+	.github-button > a:hover {
+		color: #333;
+		text-decoration: none;
+	}
+	.linkedin-button > a:hover {
+		color: #3893c4;
+		text-decoration: none;
+	}
+	.apple-button > a:hover {
+		color: #AAA;
+		text-decoration: none;
+	}
+	.github-button {
+		font-size: 10px;
+	}
+	.linkedin-button {
+		font-size: 10px;
+	}
+	.apple-button {
+		font-size: 10px;
+	}
   </style>
   <body>
     <div class="row" style="padding-top:6rem;">
@@ -51,12 +73,43 @@
     		<div class="container">
     			<h1 style="padding-bottom:3rem; font-weight: 200; font-size: 40px; color:#000;">Hello!</h1>
     			<p>I am an iOS and full stack developer.</p>
-    			<p>I make <a href="https://skeychkey.co">Sketchkey Keyboard</a>, a drawing keyboard for iOS which has had over 10,000 downloads and has been featured 13 times.</p>
-    			<p>Previously, I was a full-stack developer at <a href="https://samlabs.me">SAM Labs</a> where I worked on firmware and bluetooth communications, cloud infrastructure and the frontend application.</p>
+    			<p>I make <a href="https://sketchkey.co">Sketchkey Keyboard</a>, a drawing keyboard for iOS which has had over 10,000 downloads and has been featured 13 times.</p>
+    			<p>Previously, I was a full-stack developer at <a href="https://samlabs.me">SAM Labs</a> where I worked on CSR firmware, Bluetooth LE, cloud infrastructure, Raspberry Pi OS configuration and socket communication, and the frontend application.</p>
     			<p>I graduated with a Masters in Computer Science from the University of Bristol and was awarded the Best Computer Architecture award for my dissertation on cryogenic microelectronics.</p>
     			<p>Feel free to contact me via <a href="https://uk.linkedin.com/in/francishart">LinkedIn</a>.</p>
-    			<p style="padding-top:3rem;">Francis Hart</p>
+    			<p style="padding-top:3rem;">Thanks,<br></br>Francis Hart</p>
     		</div>
+    	</div>
+    </div>
+
+	<div class="row" style="padding-top:6rem;">
+    	<div class="col-md-12">
+    		<div class="container">
+    			<span class="github-button">
+				    <a href="https://github.com/francishart">
+				    <span class="fa-stack fa-4x">
+				        <i class="fa fa-circle fa-stack-2x"></i>
+				        <i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
+				    </span>
+				    </a>
+				</span>
+				<span class="linkedin-button">
+				    <a href="https://uk.linkedin.com/in/francishart">
+				    <span class="fa-stack fa-4x">
+				        <i class="fa fa-circle fa-stack-2x"></i>
+				        <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+				    </span>
+				    </a>
+				</span>
+				<span class="apple-button">
+				    <a href="https://appstore.com/francishart">
+				    <span class="fa-stack fa-4x">
+				        <i class="fa fa-circle fa-stack-2x"></i>
+				        <i class="fa fa-apple fa-stack-1x fa-inverse"></i>
+				    </span>
+				    </a>
+				</span>
+			</div>
     	</div>
     </div>
 
