--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	    color: #222;
 	}
 	.github-button > a:hover {
-		color: #333;
+		color: #555;
 		text-decoration: none;
 	}
 	.linkedin-button > a:hover {
@@ -72,10 +72,11 @@
     	<div class="col-md-12">
     		<div class="container">
     			<h1 style="padding-bottom:3rem; font-weight: 200; font-size: 40px; color:#000;">Hello!</h1>
-    			<p>I am an iOS and full stack developer.</p>
-    			<p>I make <a href="http://sketchkey.co">Sketchkey Keyboard</a>, a drawing keyboard for iOS which has had over 21,000 downloads and has been featured 13 times on the Apple App Store.</p>
-    			<p>Previously, I was a full-stack developer at <a href="https://samlabs.me">SAM Labs</a> where I worked on CSR firmware, Bluetooth LE, cloud infrastructure, Raspberry Pi OS configuration and socket communication, and the frontend application.</p>
-    			<p>I graduated with a Masters in Computer Science from the University of Bristol and was awarded the Best Computer Architecture award for my dissertation on Cryogenic Microelectronics for Photonic Quantum Computers.</p>
+    			<p>I am a software engineer specialising in mobile and full-stack applications.</p>
+    			<p>Currently I work at <a href="http://mobilecaddy.net">MobileCaddy</a> developing the native iOS and Android layer, tools and systems for the MobileCaddy development platform.</p>
+    			<p>I also make <a href="http://sketchkey.co">Sketchkey Keyboard</a>, a drawing keyboard for iOS which has had over 21,000 downloads and has been featured 13 times on the Apple App Store.</p>
+    			<p>Previously, I was a full-stack developer at <a href="https://samlabs.me">SAM Labs</a> where I worked on CSR firmware, Bluetooth Low Energy, cloud infrastructure & API, Raspberry Pi OS configuration and socket communication, and the frontend application.</p>
+    			<p>I graduated with a Masters in Computer Science from the University of Bristol and was awarded the Best Computer Architecture award by Infineon for my dissertation on Cryogenic Microelectronics for Photonic Quantum Computers.</p>
     			<p>Feel free to contact me via <a href="https://uk.linkedin.com/in/francishart">LinkedIn</a>.</p>
     			<p style="padding-top:3rem;">Thanks,<br></br>Francis Hart</p>
     		</div>
