--- a/index.html
+++ b/index.html
@@ -9,109 +9,98 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css">
+    <link href="css/main.css" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <!--[if lt IE 9]> <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script> <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script> <![endif]-->
   </head>
-  <style>
-  body {
-  	background-color: #ECECEC;
-  	color: #797979;
-  }
-  	a {
-  		font-weight: 800;
-  	}
-  /* unvisited link */
-	a:link {
-	    color: #222;
-	}
-
-	/* visited link */
-	a:visited {
-	    color: #222;
-	}
-
-	/* mouse over link */
-	a:hover {
-	    color: #222;
-	}
-
-	/* selected link */
-	a:active {
-	    color: #222;
-	}
-	.github-button > a:hover {
-		color: #555;
-		text-decoration: none;
-	}
-	.linkedin-button > a:hover {
-		color: #3893c4;
-		text-decoration: none;
-	}
-	.apple-button > a:hover {
-		color: #AAA;
-		text-decoration: none;
-	}
-	.github-button {
-		font-size: 10px;
-	}
-	.linkedin-button {
-		font-size: 10px;
-	}
-	.apple-button {
-		font-size: 10px;
-	}
-  </style>
   <body>
-    <div class="row" style="padding-top:6rem;">
-    	<div class="col-md-12">
-    		<div class="container">
-    			<h1 style="padding-bottom:3rem; font-weight: 200; font-size: 40px; color:#000;">Hello!</h1>
-    			<p>I am a software engineer specialising in mobile and full-stack applications.</p>
-    			<p>Currently I work at <a href="http://mobilecaddy.net">MobileCaddy</a> developing the native iOS and Android layer, tools and systems for the MobileCaddy development platform.</p>
-    			<p>I also make <a href="http://sketchkey.co">Sketchkey Keyboard</a>, a drawing keyboard for iOS which has had over 21,000 downloads and has been featured 13 times on the Apple App Store.</p>
-    			<p>Previously, I was a full-stack developer at <a href="https://samlabs.me">SAM Labs</a> where I worked on CSR firmware, Bluetooth Low Energy, cloud infrastructure & API, Raspberry Pi OS configuration and socket communication, and the frontend application.</p>
-    			<p>I graduated with a Masters in Computer Science from the University of Bristol and was awarded the Best Computer Architecture award by Infineon for my dissertation on Cryogenic Microelectronics for Photonic Quantum Computers.</p>
-    			<p>Feel free to contact me via <a href="https://uk.linkedin.com/in/francishart">LinkedIn</a>.</p>
-    			<p style="padding-top:3rem;">Thanks,<br></br>Francis Hart</p>
-    		</div>
-    	</div>
-    </div>
+    <div class="container-fluid header">
+      <div class="container">
 
-	<div class="row" style="padding-top:6rem;">
-    	<div class="col-md-12">
-    		<div class="container">
-    			<span class="github-button">
-				    <a href="https://github.com/francishart">
-				    <span class="fa-stack fa-4x">
-				        <i class="fa fa-circle fa-stack-2x"></i>
-				        <i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
-				    </span>
-				    </a>
-				</span>
-				<span class="linkedin-button">
-				    <a href="https://uk.linkedin.com/in/francishart">
-				    <span class="fa-stack fa-4x">
-				        <i class="fa fa-circle fa-stack-2x"></i>
-				        <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-				    </span>
-				    </a>
-				</span>
-				<span class="apple-button">
-				    <a href="https://appstore.com/francishart">
-				    <span class="fa-stack fa-4x">
-				        <i class="fa fa-circle fa-stack-2x"></i>
-				        <i class="fa fa-apple fa-stack-1x fa-inverse"></i>
-				    </span>
-				    </a>
-				</span>
-			</div>
-    	</div>
+        <div class="row section">
+          <div class="col-md-12 social-buttons">
+            <span class="github-button">
+              <a href="https://github.com/francishart">
+                <span class="fa-stack fa-4x">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </span>
+            <span class="linkedin-button">
+              <a href="https://uk.linkedin.com/in/francishart">
+                <span class="fa-stack fa-4x">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </span>
+            <span class="apple-button">
+              <a href="https://appstore.com/francishart">
+                <span class="fa-stack fa-4x">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-apple fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </span>
+            <span class="medium-button">
+              <a href="https://medium.com/@francishart">
+                <span class="fa-stack fa-4x">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </span>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="container">
+
+      <div class="row section">
+        <div class="col-md-6">
+          <h1 class="heading">Francis Hart</h1>
+          <p>I am a software engineer specialising in mobile and full-stack applications.</p>
+          <p>Currently I work at
+            <a class="mobilecaddy" href="http://mobilecaddy.net">MobileCaddy</a>
+            developing the native iOS and Android layer, tools and systems for the MobileCaddy development platform.</p>
+          <p>I also make
+            <a class="sketchkey" href="http://sketchkey.co">SketchKey Keyboard</a>, a drawing keyboard for iOS which has had over 21,000 downloads and has been featured 13 times on the Apple App Store.</p>
+          <p>Previously, I was a full-stack developer at
+            <a class="sam-labs" href="https://samlabs.me">SAM Labs</a>
+            where I worked on CSR firmware, Bluetooth Low Energy, cloud infrastructure &amp; API, Raspberry Pi OS configuration and socket communication, and the frontend application.</p>
+          <p>I graduated with a Masters in Computer Science from the University of Bristol and was awarded the Infineon Prize in Computer Architecture for my dissertation on Cryogenic Microelectronics for Photonic Quantum Computers.</p>
+          <p>Feel free to contact me via
+            <a href="https://uk.linkedin.com/in/francishart">LinkedIn</a>.</p>
+          <br/>
+          <p >Thanks,
+            <br/>Francis Hart</p>
+        </div>
+      </div>
+
+      <div class="row section">
+        <div class="col-md-6">
+          <h1 class="heading">Projects &amp; Portfolio</h1>
+          <p>
+            <a href="http://sketchkey.co">sketchkey.co</a>
+            - Drawing keyboard for iOS
+          </p>
+          <p>
+            <a href="http://urlyapp.com">urlyapp.com</a>
+            - URL Recognition app for iOS
+          </p>
+          <p>
+            <a href="http://riselondon.com">riselondon.com</a>
+            - Responsive custom website for a London based architecture company
+          </p>
+        </div>
+      </div>
+
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -119,13 +108,21 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-	
-	  ga('create', 'UA-42760856-1', 'auto');
-	  ga('send', 'pageview');
+      (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+          (i[r].q = i[r].q || []).push(arguments)
+        },
+        i[r].l = 1 * new Date();
+        a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+      })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+      ga('create', 'UA-42760856-1', 'auto');
+      ga('send', 'pageview');
     </script>
   </body>
 </html>
