Adding abbeymeadheating project.

--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
             <a href="http://riselondon.com">riselondon.com</a>
             - Responsive custom website for a London based architecture company
           </p>
+          <p>
+            <a href="http://abbeymeadheating.co.uk">abbeymeadheating.co.uk</a>
+            - Wordpress based website with fully custom theme for a local heating company
+          </p>
         </div>
       </div>
 
