--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
                 </span>
               </a>
             </span>
+            <span class="twitter-button">
+              <a href="https://twitter.com/francishart_">
+                <span class="fa-stack fa-4x">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </span>
           </div>
         </div>
 
