--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       </div>
     </div>
-    <div class="container">
+    <div class="container projects">
 
       <div class="row section">
         <div class="col-md-6">
