--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
       <div class="row section">
         <div class="col-md-6">
           <h1 class="heading">Projects &amp; Portfolio</h1>
+          <h2>iOS &amp; macOS apps</h2>
           <p>
             <a href="http://sketchkey.co">sketchkey.co</a>
             - Drawing keyboard for iOS
@@ -102,6 +103,8 @@
             <a href="http://urlyapp.com">urlyapp.com</a>
             - URL Recognition app for iOS
           </p>
+          
+          <h2>Websites</h2>
           <p>
             <a href="http://riselondon.com">riselondon.com</a>
             - Responsive custom website for a London based architecture company
