--- a/index.html
+++ b/index.html
@@ -96,21 +96,25 @@
           <h1 class="heading">Projects &amp; Portfolio</h1>
           <h2>iOS &amp; macOS apps</h2>
           <p>
-            <a href="http://sketchkey.co">sketchkey.co</a>
+            <a href="http://mediaexplorerapp.com">Media Explorer for iMessage</a>
+            - Find Hidden iMessage files on your Mac
+          </p>
+          <p>
+            <a href="http://sketchkey.co">SketchKey Keyboard</a>
             - Drawing keyboard for iOS
           </p>
           <p>
-            <a href="http://urlyapp.com">urlyapp.com</a>
+            <a href="http://urlyapp.com">Urly</a>
             - URL Recognition app for iOS
           </p>
           
           <h2>Websites</h2>
           <p>
-            <a href="http://riselondon.com">riselondon.com</a>
+            <a href="http://riselondon.com">RISE London</a>
             - Responsive custom website for a London based architecture company
           </p>
           <p>
-            <a href="http://abbeymeadheating.co.uk">abbeymeadheating.co.uk</a>
+            <a href="http://abbeymeadheating.co.uk">Abbeymead Heating &amp; Plumbing</a>
             - Wordpress based website with fully custom theme for a local heating company
           </p>
         </div>
