--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <p>I am a software engineer specialising in mobile and full-stack applications.</p>
           <p>Currently I work at
             <a class="mobilecaddy" href="http://mobilecaddy.net">MobileCaddy</a>
-            developing the native iOS and Android layer, tools and systems for the MobileCaddy development platform.</p>
+            as the Lead Product Engineer, developing the native iOS and Android layer, automation, tools and systems for the MobileCaddy development platform.</p>
           <p>I also make
             <a class="sketchkey" href="http://sketchkey.co">SketchKey Keyboard</a>, a drawing keyboard for iOS which has had over 21,000 downloads and has been featured 13 times on the Apple App Store.</p>
           <p>Previously, I was a full-stack developer at
