Adding Remaining Calories app

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
           <h1 class="heading">Projects &amp; Portfolio</h1>
           <h2>iOS &amp; macOS apps</h2>
           <p>
+            <a href="https://itunes.apple.com/us/app/remaining-calories-for-myfitnesspal/id1241953092?ls=1&mt=12">Remaining Calories for MyFitnessPal</a>
+            - See your remaining calories from your MyFitnessPal account on you Mac's menu bar.
+          </p>
+          <p>
             <a href="http://mediaexplorerapp.com">Media Explorer for iMessage</a>
             - Find Hidden iMessage files on your Mac
           </p>
